--- a/index.html
+++ b/index.html
@@ -1165,6 +1165,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   </a>
   
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
 
 
 
@@ -1705,6 +1711,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
   
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
+  
   <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/lsgo/">
     Project
   </a>
@@ -2049,6 +2061,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
   
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
+
+  
   <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
     Project
   </a>
@@ -2175,6 +2193,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
   
   <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
     Project
   </a>
   
@@ -2423,6 +2447,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   </a>
   
 
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
+    Project
+  </a>
+  
+
 
 
 
@@ -2537,6 +2567,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
   
   <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
+    Project
+  </a>
+  
+
+  
+  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
     Project
   </a>
   
