--- a/publication/mei-2014-cooperative/index.html
+++ b/publication/mei-2014-cooperative/index.html
@@ -579,6 +579,12 @@
 
 
   
+  <a class="btn btn-outline-primary my-1 mr-1" href="/project/esco/">
+    Project
+  </a>
+  
+
+  
   <a class="btn btn-outline-primary my-1 mr-1" href="/project/lsgo/">
     Project
   </a>
