--- a/publication/tan-2019-hybrid/index.html
+++ b/publication/tan-2019-hybrid/index.html
@@ -565,6 +565,12 @@
 
 
   
+  <a class="btn btn-outline-primary my-1 mr-1" href="/project/ahd/">
+    Project
+  </a>
+  
+
+  
   <a class="btn btn-outline-primary my-1 mr-1" href="/project/esco/">
     Project
   </a>
