--- a/index.html
+++ b/index.html
@@ -2800,6 +2800,12 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <li>IEEE Senior Member, ACM Member</li>
 </ul>
 
+<h3 id="internal">Internal</h3>
+
+<ul>
+<li>ENGR/COMP489 (Honours Project) Committee Member, 2019</li>
+</ul>
+
   </div>
   
 </div>
