--- a/index.html
+++ b/index.html
@@ -2847,6 +2847,7 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <li>My Git <a href="https://github.com/meiyi1986/gpucarp">repository</a>: <strong>meta-heuristic and hyper-heuristic algorithms for uncertain arc routing problem</strong>.</li>
 <li>My Git <a href="https://github.com/meiyi1986/gporienteering">repository</a>: <strong>genetic programming hyper-heuristic algorithms for stochastic orienteering problem</strong>.</li>
 <li>The ECJ Java library: <a href="https://cs.gmu.edu/~eclab/projects/ecj/">https://cs.gmu.edu/~eclab/projects/ecj/</a>. Highly recommeded if using GP.</li>
+<li>The gplearn Python library for GP: <a href="http://gplearn.readthedocs.io/en/stable">http://gplearn.readthedocs.io/en/stable</a>.</li>
 <li>The DEAP Python library for GP: <a href="https://deap.readthedocs.io/en/master/">https://deap.readthedocs.io/en/master/</a>.</li>
 <li>The HyFlex hyper-heuristic framework: <a href="http://www.asap.cs.nott.ac.uk/external/chesc2011/hyflex_description.html">http://www.asap.cs.nott.ac.uk/external/chesc2011/hyflex_description.html</a></li>
 <li>The EvoHyp hyper-heuristic framwork: <a href="http://titancs.ukzn.ac.za/EvoHyp.aspx">http://titancs.ukzn.ac.za/EvoHyp.aspx</a></li>
