--- a/index.html
+++ b/index.html
@@ -2857,7 +2857,7 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <h3 id="interesting-links">Interesting links</h3>
 
 <ul>
-<li>My <strong>IEEE CIS Webinar</strong>: &ldquo;Genetic Programming Hyper-Heuristics for Combinatorial Optimisation&rdquo;. <a href="https://ieeetv.ieee.org/ieeetv-specials/genetic-programming-hyper-heuristics-for-combinatorial-optimisation-yi-mei-cis-webinar">[Video]</a> | <a href="IEEEWebinar.pptx">[Slides]</a></li>
+<li>My <strong>IEEE CIS Webinar</strong>: Genetic Programming Hyper-Heuristics for Combinatorial Optimisation: <a href="https://ieeetv.ieee.org/ieeetv-specials/genetic-programming-hyper-heuristics-for-combinatorial-optimisation-yi-mei-cis-webinar">[Video]</a> | <a href="IEEEWebinar.pptx">[Slides]</a></li>
 <li>An interesting website about robots learned by evolutionary computation: <a href="https://strandbeest.com">https://strandbeest.com</a></li>
 <li>A. E. Eiben&rsquo;s TED talk: <a href="https://www.youtube.com/watch?v=WJX_wAKhg8A">Tech Kangaroos - Evolution at Work</a></li>
 <li>Keith Downing&rsquo;s TED Talk: <a href="https://www.youtube.com/watch?v=D3zUmfDd79s">Evolutionary computation</a></li>
