--- a/index.html
+++ b/index.html
@@ -2861,6 +2861,7 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <li>An interesting website about robots learned by evolutionary computation: <a href="https://strandbeest.com">https://strandbeest.com</a></li>
 <li>A. E. Eiben&rsquo;s TED talk: <a href="https://www.youtube.com/watch?v=WJX_wAKhg8A">Tech Kangaroos - Evolution at Work</a></li>
 <li>Keith Downing&rsquo;s TED Talk: <a href="https://www.youtube.com/watch?v=D3zUmfDd79s">Evolutionary computation</a></li>
+<li>Xin Yao&rsquo;s Public Lecture: <a href="https://www.youtube.com/watch?v=pcl08XA1REM"> What can evolutionary computation do for you?</a></li>
 <li>Hyper-heuristic bibliography: <a href="https://mustafamisir.github.io/hh.html">https://mustafamisir.github.io/hh.html</a></li>
 <li>An interesting <strong>Science</strong> paper &ldquo;<a href="http://science.sciencemag.org/content/324/5923/81">Distilling Free-Form Natural Laws from Experimental Data</a>&rdquo;, which uses genetic programming to automatically discover natural laws (symbolic regression).</li>
 <li>A <strong>Nature</strong> paper: &ldquo;<a href="https://www.nature.com/articles/nature14544">From evolutionary computation to the evolution of things</a>&ldquo;</li>
