--- a/index.html
+++ b/index.html
@@ -2840,7 +2840,7 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   <div class="col-lg-12">
     
 
-<h2 id="useful-resources">Useful Resources</h2>
+<h2 id="useful-resources"><strong>Useful Resources</strong></h2>
 
 <h3 id="code">Code</h3>
 
