--- a/ecco-talks/index.html
+++ b/ecco-talks/index.html
@@ -28,7 +28,7 @@
   
     
   
-  <meta name="description" content="2019/06/25, Mazhar Anzari Ardeh, practice on PhD proposal seminar. 2019/06/18, Prof Juergen Branke, Seminar: surrogate-assisted optimisation. 2019/05/29, Ramya Anasseriyil Viswambaran, practice on PhD proposal seminar. 2019/05/22, Tao Shi, practice on PhD proposal seminar. 2019/05/14, Su Nguyen, human centric heuristic evolution for dynamic scheduling. 2019/05/07, Mazhar Anzari Ardeh, discussion on PhD proposal objectives. 2019/04/30, Tao Shi, discussion on PhD proposal objectives. 2019/04/16, Chen Wang, solving scheduling problems with reinforcement learning. 2019/04/09, Victoria Huang, reinforcement learning for network scheduling policy optimisation.">
+  <meta name="description" content="2019/06/25, Mazhar Anzari Ardeh, practice on PhD proposal seminar. 2019/06/18, Prof Juergen Branke, Seminar: surrogate-assisted optimisation. 2019/06/03, Fangfang Zhang, discuss recent work on feature selection with GP. 2019/05/29, Ramya Anasseriyil Viswambaran, practice on PhD proposal seminar. 2019/05/22, Tao Shi, practice on PhD proposal seminar. 2019/05/14, Su Nguyen, human centric heuristic evolution for dynamic scheduling. 2019/05/07, Mazhar Anzari Ardeh, discussion on PhD proposal objectives. 2019/04/30, Tao Shi, discussion on PhD proposal objectives.">
 
   
   <link rel="alternate" hreflang="en-us" href="https://meiyi1986.github.io/ecco-talks/">
@@ -120,7 +120,7 @@
   <meta property="og:site_name" content="Yi Mei @ VUW">
   <meta property="og:url" content="https://meiyi1986.github.io/ecco-talks/">
   <meta property="og:title" content="Talks of the ECCO group | Yi Mei @ VUW">
-  <meta property="og:description" content="2019/06/25, Mazhar Anzari Ardeh, practice on PhD proposal seminar. 2019/06/18, Prof Juergen Branke, Seminar: surrogate-assisted optimisation. 2019/05/29, Ramya Anasseriyil Viswambaran, practice on PhD proposal seminar. 2019/05/22, Tao Shi, practice on PhD proposal seminar. 2019/05/14, Su Nguyen, human centric heuristic evolution for dynamic scheduling. 2019/05/07, Mazhar Anzari Ardeh, discussion on PhD proposal objectives. 2019/04/30, Tao Shi, discussion on PhD proposal objectives. 2019/04/16, Chen Wang, solving scheduling problems with reinforcement learning. 2019/04/09, Victoria Huang, reinforcement learning for network scheduling policy optimisation."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
+  <meta property="og:description" content="2019/06/25, Mazhar Anzari Ardeh, practice on PhD proposal seminar. 2019/06/18, Prof Juergen Branke, Seminar: surrogate-assisted optimisation. 2019/06/03, Fangfang Zhang, discuss recent work on feature selection with GP. 2019/05/29, Ramya Anasseriyil Viswambaran, practice on PhD proposal seminar. 2019/05/22, Tao Shi, practice on PhD proposal seminar. 2019/05/14, Su Nguyen, human centric heuristic evolution for dynamic scheduling. 2019/05/07, Mazhar Anzari Ardeh, discussion on PhD proposal objectives. 2019/04/30, Tao Shi, discussion on PhD proposal objectives."><meta property="og:image" content="https://meiyi1986.github.io/img/icon-192.png">
   <meta property="og:locale" content="en-us">
   
   
@@ -505,6 +505,7 @@
       <ul>
 <li>2019/06/25, <strong><a href="https://ecs.victoria.ac.nz/Main/GradMazharAnsariArdeh">Mazhar Anzari Ardeh</a></strong>, practice on PhD proposal seminar.</li>
 <li>2019/06/18, <strong><a href="https://www.wbs.ac.uk/about/person/juergen-branke/">Prof Juergen Branke</a></strong>, <strong>Seminar</strong>: surrogate-assisted optimisation.</li>
+<li>2019/06/03, <strong><a href="https://ecs.victoria.ac.nz/Main/GradFangFangZhang">Fangfang Zhang</a></strong>, discuss recent work on feature selection with GP.</li>
 <li>2019/05/29, <strong><a href="https://ecs.victoria.ac.nz/Main/GradRamyaAnasseriyilViswambaran">Ramya Anasseriyil Viswambaran</a></strong>, practice on PhD proposal seminar.</li>
 <li>2019/05/22, <strong><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></strong>, practice on PhD proposal seminar.</li>
 <li>2019/05/14, <strong><a href="https://scholar.google.co.nz/citations?user=PQYVtl4AAAAJ&hl=en">Su Nguyen</a></strong>, human centric heuristic evolution for dynamic scheduling.</strong></li>
