--- a/index.html
+++ b/index.html
@@ -2049,6 +2049,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/tan-2019-hybrid/tan-2019-hybrid.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -2059,18 +2063,6 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
-    Project
-  </a>
-  
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
-    Project
-  </a>
-  
 
 
 
@@ -2180,6 +2172,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/karunakaran-2019-active/karunakaran-2019-active.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -2190,18 +2186,6 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
-    Project
-  </a>
-  
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
-    Project
-  </a>
-  
 
 
 
@@ -2247,7 +2231,7 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   <div class="media-body">
 
     <h3 class="article-title mb-0 mt-0" itemprop="name">
-      <a href="/publication/abdollahi-2019-active/" itemprop="url">An Ontology-based Two-Stage Approach to Medical Text Classification with Feature Selection by Particle Swarm Optimisation</a>
+      <a href="/publication/abdollahi-2019-ontology/" itemprop="url">An Ontology-based Two-Stage Approach to Medical Text Classification with Feature Selection by Particle Swarm Optimisation</a>
     </h3>
 
     
@@ -2318,10 +2302,14 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/abdollahi-2019-ontology/abdollahi-2019-ontology.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
-        data-filename="/publication/abdollahi-2019-active/%7Bslugify%28entry%5B%27ID%27%5D%29%7D.bib">
+        data-filename="/publication/abdollahi-2019-ontology/%7Bslugify%28entry%5B%27ID%27%5D%29%7D.bib">
   Cite
 </button>
 
@@ -2430,6 +2418,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/zhang-2019-can/zhang-2019-can.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -2440,18 +2432,6 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
-    Project
-  </a>
-  
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
-    Project
-  </a>
-  
 
 
 
@@ -2554,6 +2534,10 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/zhang-2019-evolving/zhang-2019-evolving.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -2564,18 +2548,6 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 
 
 
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
-    Project
-  </a>
-  
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
-    Project
-  </a>
-  
 
 
 
