--- a/publication/index.html
+++ b/publication/index.html
@@ -833,18 +833,6 @@
 
 
 
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
-    Project
-  </a>
-  
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
-    Project
-  </a>
-  
-
 
 
 
@@ -923,6 +911,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/zhang-2019-evolving/zhang-2019-evolving.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -933,18 +925,6 @@
 
 
 
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
-    Project
-  </a>
-  
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
-    Project
-  </a>
-  
 
 
 
@@ -1024,6 +1004,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/zhang-2019-can/zhang-2019-can.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -1034,18 +1018,6 @@
 
 
 
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
-    Project
-  </a>
-  
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
-    Project
-  </a>
-  
 
 
 
@@ -1125,7 +1097,7 @@
 
   </span>
   (2019).
-  <a href="/publication/abdollahi-2019-active/" itemprop="name">An Ontology-based Two-Stage Approach to Medical Text Classification with Feature Selection by Particle Swarm Optimisation</a>.
+  <a href="/publication/abdollahi-2019-ontology/" itemprop="name">An Ontology-based Two-Stage Approach to Medical Text Classification with Feature Selection by Particle Swarm Optimisation</a>.
   <em>Proceedings of the IEEE Congress on Evolutionary Computation (CEC)</em>.
   
   <p>
@@ -1139,10 +1111,14 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/abdollahi-2019-ontology/abdollahi-2019-ontology.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
-        data-filename="/publication/abdollahi-2019-active/%7Bslugify%28entry%5B%27ID%27%5D%29%7D.bib">
+        data-filename="/publication/abdollahi-2019-ontology/%7Bslugify%28entry%5B%27ID%27%5D%29%7D.bib">
   Cite
 </button>
 
@@ -1235,6 +1211,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/karunakaran-2019-active/karunakaran-2019-active.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -1245,18 +1225,6 @@
 
 
 
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
-    Project
-  </a>
-  
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
-    Project
-  </a>
-  
 
 
 
@@ -1336,6 +1304,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/tan-2019-hybrid/tan-2019-hybrid.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
@@ -1346,18 +1318,6 @@
 
 
 
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/ahd/">
-    Project
-  </a>
-  
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/project/esco/">
-    Project
-  </a>
-  
 
 
 
