--- a/publication/karunakaran-2019-active/index.html
+++ b/publication/karunakaran-2019-active/index.html
@@ -540,6 +540,8 @@
 
 
 
+  
+
 
 
 
@@ -560,6 +562,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="/publication/karunakaran-2019-active/karunakaran-2019-active.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 js-cite-modal"
@@ -570,18 +576,6 @@
 
 
 
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1" href="/project/ahd/">
-    Project
-  </a>
-  
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1" href="/project/esco/">
-    Project
-  </a>
-  
 
 
 
