--- a/publication/zhang-2019-can/index.html
+++ b/publication/zhang-2019-can/index.html
@@ -533,6 +533,8 @@
 
 
 
+  
+
 
 
 
@@ -553,6 +555,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1" href="/publication/zhang-2019-can/zhang-2019-can.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 js-cite-modal"
@@ -563,18 +569,6 @@
 
 
 
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1" href="/project/ahd/">
-    Project
-  </a>
-  
-
-  
-  <a class="btn btn-outline-primary my-1 mr-1" href="/project/esco/">
-    Project
-  </a>
-  
 
 
 
