--- a/publication/index.html
+++ b/publication/index.html
@@ -822,6 +822,10 @@
   
 
 
+<a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="/publication/ardeh-2019-transfer/ardeh-2019-transfer.pdf" target="_blank" rel="noopener">
+  PDF
+</a>
+
 
 
 <button type="button" class="btn btn-outline-primary my-1 mr-1 btn-sm js-cite-modal"
