--- a/404.html
+++ b/404.html
@@ -394,23 +394,23 @@
   <h2>Publications</h2>
   
   <ul>
+    <li><a href="/publication/zhang-2019-two/">A Two-Stage Genetic Programming Hyper-heuristic Approach with Feature Selection for Dynamic Flexible Job Shop Scheduling</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/ardeh-2019-genetic/">Genetic Programming Hyper-Heuristic with Knowledge Transfer for Uncertain Capacitated Arc Routing Problem</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/wang-2019-novel/">Novel Ensemble Genetic Programming Hyper-Heuristics for Uncertain Capacitated Arc Routing Problem</a></li>
+  </ul>
+  
+  <ul>
+    <li><a href="/publication/tan-2019-novel/">Novel Genetic Algorithm with Dual Chromosome Representation for Resource Allocation in Container-based Clouds</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="/publication/tan-2019-hybrid/">A Hybrid Genetic Programming Hyper-Heuristic Approach for Online Two-level Resource Allocation in Container-based Clouds</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/karunakaran-2019-active/">Active Sampling for Dynamic Job Shop Scheduling using Genetic Programming</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/abdollahi-2019-ontology/">An Ontology-based Two-Stage Approach to Medical Text Classification with Feature Selection by Particle Swarm Optimisation</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/zhang-2019-can/">Can Stochastic Dispatching Rules Evolved by Genetic Programming Hyper-heuristics Help in Dynamic Flexible Job Shop Scheduling?</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="/publication/zhang-2019-evolving/">Evolving Dispatching Rules for Multi-objective Dynamic Flexible Job Shop Scheduling via Genetic Programming Hyper-heuristics</a></li>
   </ul>
   
   
