--- a/supervision/index.html
+++ b/supervision/index.html
@@ -543,7 +543,7 @@ Grouping Constrained Storage Location Assignment Problem&rdquo; <a href="https:/
 <li>Daniel Yska (Victoria University of Wellington, 2017): &ldquo;Genetic Programming Hyper-heuristics for Flexible Job Shop Scheduling&rdquo; (with Prof Mengjie Zhang)</li>
 </ul>
 
-<h3 id="summer-research-students">Summer Research Students</h3>
+<h3 id="summer-research-scholarship-students">Summer Research Scholarship Students</h3>
 
 <ul>
 <li>Shaolin Wang (Victoria University of Wellington, 2018): &ldquo;Evolutionary Computation for Uncertain Arc Routing&rdquo; (with Prof Mengjie Zhang)</li>
