--- a/index.html
+++ b/index.html
@@ -2809,7 +2809,7 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <h3 id="datasets">Datasets</h3>
 
 <ul>
-<li>Capacitated Arc Routing Problem: <a href="files/data/carp/gdb.zip">[gdb]</a>, <a href="files/data/carp/val.zip">[val]</a></li>
+<li>Capacitated Arc Routing Problem: <a href="files/data/carp/gdb.zip">[gdb]</a>, <a href="files/data/carp/val.zip">[val]</a>, <a href="files/data/carp/egl.zip">[egl]</a>, <a href="files/data/carp/gdb.zip">[EGL-G]</a><br /></li>
 </ul>
 
 <h3 id="interesting-links">Interesting links</h3>
