--- a/index.html
+++ b/index.html
@@ -2809,7 +2809,7 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <h3 id="datasets">Datasets</h3>
 
 <ul>
-<li><p>Capacitated Arc Routing Problem</p>
+<li>Capacitated Arc Routing Problem
 
 <ul>
 <li>The <a href="files/data/carp/gdb.zip"><strong>gdb</strong></a> dataset: 23 small instances (~30 nodes and ~60 required edges).</li>
@@ -2817,8 +2817,7 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <li>The <a href="files/data/carp/egl.zip"><strong>egl</strong></a> dataset: 8 groups of large instances (~150 nodes and ~200 required edges). The former 4 groups (e1 to e4) and the latter 4 groups (s1 to s4) are based on the same graph, but different subsets of required edges. Each group contains 3 instances (denoted as A, B, C), based on the same graph and required edges, but with different vehicle capacity.</li>
 <li>The <a href="files/data/carp/gdb.zip"><strong>EGL-G</strong></a> dataset: 2 groups of large instances (~250 nodes and ~400 required edges). Each group contains 5 instances (denoted as A, B, C, D, E), based on the same graph and required edges, but with different vehicle capacity.</li>
 </ul></li>
-
-<li><p>Vehicle Routing Problems: benchmark instances for different problem variants can be found from <a href="https://w1.cirrelt.ca/~vidalt/en/VRP-resources.html">Dr. T. Vidal&rsquo;s page</a>.</p></li>
+<li>Vehicle Routing Problems: benchmark instances for different problem variants can be found from <a href="https://w1.cirrelt.ca/~vidalt/en/VRP-resources.html">Dr. T. Vidal&rsquo;s page</a>.</li>
 </ul>
 
 <h3 id="interesting-links">Interesting links</h3>
