--- a/index.html
+++ b/index.html
@@ -2809,7 +2809,7 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <h3 id="datasets">Datasets</h3>
 
 <ul>
-<li>Capacitated Arc Routing Problem
+<li><strong>Capacitated Arc Routing Problem</strong>
 
 <ul>
 <li>The <a href="files/data/carp/gdb.zip">gdb</a> dataset: <em>23 small instances (~30 nodes and ~60 required edges)</em>.</li>
@@ -2817,7 +2817,15 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <li>The <a href="files/data/carp/egl.zip">egl</a> dataset: <em>8 groups of large instances (~150 nodes and ~200 required edges). The former 4 groups (e1 to e4) and the latter 4 groups (s1 to s4) are based on the same graph, but different subsets of required edges. Each group contains 3 instances (denoted as A, B, C), based on the same graph and required edges, but with different vehicle capacity.</em></li>
 <li>The <a href="files/data/carp/gdb.zip">EGL-G</a> dataset: <em>2 groups of large instances (~250 nodes and ~400 required edges). Each group contains 5 instances (denoted as A, B, C, D, E), based on the same graph and required edges, but with different vehicle capacity.</em></li>
 </ul></li>
-<li>Vehicle Routing Problems: benchmark instances for different problem variants can be found from <a href="https://w1.cirrelt.ca/~vidalt/en/VRP-resources.html">Dr. T. Vidal&rsquo;s page</a>.</li>
+<li><strong>Vehicle Routing Problems</strong>: benchmark instances for different problem variants can be found from <a href="https://w1.cirrelt.ca/~vidalt/en/VRP-resources.html">Dr. T. Vidal&rsquo;s page</a>.</li>
+<li><strong>Bin Packing Problem</strong>: a very comprehensive <a href="http://or.dei.unibo.it/library/bpplib">problem library</a>.</li>
+<li><strong>Timetabling Problem</strong>
+
+<ul>
+<li>A comprehensive <a href="http://www.cs.nott.ac.uk/~pszrq/data.htm">library from University of Nottingham.</li>
+<li>A <a href="https://www.unitime.org/exam_datasets.php">University Timetabling benchmark website</a>.</li>
+<li></li>
+</ul></li>
 </ul>
 
 <h3 id="interesting-links">Interesting links</h3>
