--- a/index.html
+++ b/index.html
@@ -2822,9 +2822,8 @@ of Problems with Multiple Interdependent Components (as sole algorithm designer 
 <li><strong>Timetabling Problem</strong>
 
 <ul>
-<li>A comprehensive <a href="http://www.cs.nott.ac.uk/~pszrq/data.htm">library from University of Nottingham.</li>
+<li>A comprehensive <a href="http://www.cs.nott.ac.uk/~pszrq/data.htm">library</a> from University of Nottingham.</li>
 <li>A <a href="https://www.unitime.org/exam_datasets.php">University Timetabling benchmark website</a>.</li>
-<li></li>
 </ul></li>
 </ul>
 
