--- a/ecco/index.html
+++ b/ecco/index.html
@@ -535,19 +535,19 @@ People Staff Members  Dr. Yi Mei (Coordinator): Evolutionary Combinatorial Optim
 <li>Jordan MacLaclan</li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradAtiyaMasood">Atiya Masood</a></li>
 <li><a href="https://www.victoria.ac.nz/som/research/phd/mgmt/amirhossein-mostofi">Amirhossein Mostofi</a></li>
-<li><a href="https://ecs.victoria.ac.nz/Main/GradJohnPark">John Park</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradSoheilaSadeghiram">Soheila Sadeghiram</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradTaoShi">Tao Shi</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradBoxiongTan">Boxiong Tan</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradChenWang">Chen Wang</a></li>
 <li>Shaolin Wang</li>
-<li><a href="https://www.researchgate.net/profile/Binzi_Xu">Binzi Xu</a> (Visiting student from Jiangnan University, 2018-2019)</li>
 <li><a href="http://ecs.victoria.ac.nz/Main/GradFangfangZhang">Fangfang Zhang</a></li>
 </ul>
 
 <h4 id="alumni">Alumni</h4>
 
 <ul>
+<li><a href="https://www.researchgate.net/profile/Binzi_Xu">Binzi Xu</a> (Visiting student from Jiangnan University, 2018-2019)</li>
+<li><a href="https://ecs.victoria.ac.nz/Main/GradJohnPark">John Park (Graduated in 2019)</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradDeepakKarunakaran">Deepak Karunakaran (Graduated in 2019)</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/GradYimingPeng">Yiming Peng (Graduated in 2019, working in KPMG)</a></li>
 <li><a href="https://ecs.victoria.ac.nz/Main/AlexandreSawczukdaSilva">Alexandre Sawczuk da Silva (Graduated in 2018, Teaching Fellow in VUW)</a></li>
